finished the 3rd lesson

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body class="page-body">
   <header></header>
-  <main></main>
+  <main>
+    <span id="hello">Hello world!</span>
+  </main>
   <footer></footer>
 </body>
 </html>
